--- a/MA1_updated.Rmd
+++ b/MA1_updated.Rmd
@@ -307,91 +307,222 @@ The momentum strategy seems to... And the average return if....
 
 
 # Excercise 5
-In the following, we will calculate the CAPM alphas using the k-month-ahead excess returns for $k\in\{1,3,6,12\}$:
+In the following, we will calculate the CAPM alphas using the k-month-ahead excess returns for $k\in\{1,3,6,12\}$. Since we lose a few observations by having to find the k-months ahead returns, then in order to most efficiently compare all the results, we have chosen to only calculate the CAPM values for observations where we have found all the specific k-months ahead returns. The k-months ahead portfolio returns are calculated as value-weighted returns based on the lagged market cap value (since this is known at the time the portfolio is constructed). It is assumed that the 1-month ahead is just the standard excess return and therefore that 3-months ahead should be calculated as the excess return two months later. The reason for this assumption is that the lagged variables are meant to be known at the time we construct the portfolio, where the excess return is then the result of this. Hence, it must be the 1-month ahead return.
 
 ```{r  Repeat the univariate portfolio, echo=FALSE}
-# Using a for-loop to create data for each of the k-month-ahead scenarios
-for(k in c(1,3,6,12)){
-  crsp_monthly_new_k <- crsp_monthly_new %>% group_by(permno) %>% 
-    mutate(mktcap_lag_long = lag(mktcap,12+k), 
-           mktcap_lag_short = lag(mktcap,1+k),
-           mom = 100*(mktcap_lag_short - mktcap_lag_long)/mktcap_lag_long) %>% 
-    filter(!is.na(mktcap_lag_long)) %>% 
-    filter(!is.na(ret_excess)) %>% 
-    filter(!is.na(mom)) %>%
-    arrange(desc(mom))
-  
-  mom_portfolios <- crsp_monthly_new_k %>%
-    group_by(month) %>%
-    mutate(
-      breakpoint_10 = quantile(mom, probs = .1),
-      breakpoint_20 = quantile(mom, probs = .2),
-      breakpoint_30 = quantile(mom, probs = .3),
-      breakpoint_40 = quantile(mom, probs = .4),
-      breakpoint_50 = quantile(mom, probs = .5),
-      breakpoint_60 = quantile(mom, probs = .6),
-      breakpoint_70 = quantile(mom, probs = .7),
-      breakpoint_80 = quantile(mom, probs = .8),
-      breakpoint_90 = quantile(mom, probs = .9),
-      portfolio = case_when(
-        mom <= breakpoint_10 ~ 10,
-        mom > breakpoint_10 & mom <= breakpoint_20 ~ 20,
-        mom > breakpoint_20 & mom <= breakpoint_30 ~ 30,
-        mom > breakpoint_30 & mom <= breakpoint_40 ~ 40,
-        mom > breakpoint_40 & mom <= breakpoint_50 ~ 50,
-        mom > breakpoint_50 & mom <= breakpoint_60 ~ 60,
-        mom > breakpoint_60 & mom <= breakpoint_70 ~ 70,
-        mom > breakpoint_70 & mom <= breakpoint_80 ~ 80,
-        mom > breakpoint_80 & mom <= breakpoint_90 ~ 90,
-        mom > breakpoint_90 ~ 100
-      )
-    ) %>%
-    group_by(month, portfolio) %>%
-    summarize(ret_excess = weighted.mean(ret_excess, mktcap_lag_short), .groups = "drop")
-  
-  
-  mom_portfolios <- mom_portfolios %>%
-    left_join(ff_monthly, by = "month")
-  
-  
-  # Finding CAPM alpha
-  mom_portfolios_summary <- mom_portfolios %>%
-    group_by(portfolio) %>%
-    summarise(
-      alpha = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
-      beta = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[2]),
-      ret_excess = mean(ret_excess)
-    )
-  
-  # Plot for CAPM alpha 
-  tmp <- mom_portfolios_summary %>%
-    ggplot(aes(x = portfolio, y = alpha, fill = as.factor(portfolio))) +
-    geom_bar(stat = "identity") +
-    labs(
-      title = paste0("Alphas of momentum-sorted portfolios (k=",k,")"),
-      x = "Momentum decile portfolios",
-      y = "CAPM alpha",
-      fill = "Portfolio"
-    ) +
-    scale_y_continuous(labels = percent) +
-    theme(legend.position = "None")
-  
-  #Saving the plots to be printed out after the for-loop
-  if(k==1){
-    plot1 <- tmp
-  } else if(k==3){
-    plot3 <- tmp
-  } else if(k==6){
-    plot6 <- tmp
-  } else{
-    plot12 <- tmp
-  }
-}
+# Creating the 3, 6, and 12 months ahead returns by moving back the respective month by 2, 5 or 11 months (since ret_excess is already 1-month ahead)
+excess_return_3_ahead <-  crsp_monthly_mom %>% mutate(month = month %m+% months(-2)) %>% select(permno, month, ret_excess_3 = ret_excess) %>% drop_na()
+excess_return_6_ahead <-  crsp_monthly_mom %>% mutate(month = month %m+% months(-5)) %>% select(permno, month, ret_excess_6 = ret_excess) %>% drop_na()
+excess_return_12_ahead <-  crsp_monthly_mom %>% mutate(month = month %m+% months(-11)) %>% select(permno, month, ret_excess_12 = ret_excess) %>% drop_na()
 
-plot1
-plot3
-plot6
-plot12
+# Combining all the k-months-ahead returns in one data frame
+crsp_monthly_k_months <- crsp_monthly_mom %>%
+  inner_join(excess_return_3_ahead, by = c("permno", "month")) %>%
+  inner_join(excess_return_6_ahead, by = c("permno", "month")) %>%
+  inner_join(excess_return_12_ahead, by = c("permno", "month"))
+
+# Arranges data by month instead of permno
+crsp_monthly_k_months <- crsp_monthly_k_months %>% 
+  arrange(month)
+
+# Calculating the decile breakpoints for the mom for each months and defines which portfolio belongs to each month
+mom_portfolios_k_ahead <- crsp_monthly_k_months %>%
+  group_by(month) %>%
+  mutate(
+    breakpoint_1 = quantile(mom, probs = .1),
+    breakpoint_2 = quantile(mom, probs = .2),
+    breakpoint_3 = quantile(mom, probs = .3),
+    breakpoint_4 = quantile(mom, probs = .4),
+    breakpoint_5 = quantile(mom, probs = .5),
+    breakpoint_6 = quantile(mom, probs = .6),
+    breakpoint_7 = quantile(mom, probs = .7),
+    breakpoint_8 = quantile(mom, probs = .8),
+    breakpoint_9 = quantile(mom, probs = .9),
+    portfolio = case_when(
+      mom <= breakpoint_1 ~ 1,
+      mom > breakpoint_1 & mom <= breakpoint_2 ~ 2,
+      mom > breakpoint_2 & mom <= breakpoint_3 ~ 3,
+      mom > breakpoint_3 & mom <= breakpoint_4 ~ 4,
+      mom > breakpoint_4 & mom <= breakpoint_5 ~ 5,
+      mom > breakpoint_5 & mom <= breakpoint_6 ~ 6,
+      mom > breakpoint_6 & mom <= breakpoint_7 ~ 7,
+      mom > breakpoint_7 & mom <= breakpoint_8 ~ 8,
+      mom > breakpoint_8 & mom <= breakpoint_9 ~ 9,
+      mom > breakpoint_9 ~ 10
+    )
+  ) %>%
+  select("permno", "month", "ret_excess", "ret_excess_3", "ret_excess_6", "ret_excess_12", "mktcap", "mktcap_lag", "mktcap_lag_12", "mom", "portfolio") %>%
+  mutate(portfolio = as.factor(portfolio))
+
+# Creating monthly portfolio value-weighted excess returns
+mom_portfolios_k_ahead <- mom_portfolios_k_ahead %>%
+  group_by(month, portfolio) %>%
+  summarise(ret_excess = weighted.mean(ret_excess, mktcap_lag),
+            ret_excess_3 = weighted.mean(ret_excess_3, mktcap_lag),
+            ret_excess_6 = weighted.mean(ret_excess_6, mktcap_lag),
+            ret_excess_12 = weighted.mean(ret_excess_12, mktcap_lag),
+            .groups = "drop")
+
+# Adds the Fama-French market excess return to the data frame
+mom_portfolios_k_ahead <- mom_portfolios_k_ahead %>%
+  left_join(ff_monthly, by = "month")
+
+# Finding the CAPM alpha by regressing the data onto the market excess return
+mom_portfolios_k_ahead %>%
+  group_by(portfolio) %>%
+  summarise(
+    alpha_1 = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
+    alpha_3 = as.numeric(lm(ret_excess_3 ~ mkt_excess)$coefficients[1]),
+    alpha_6 = as.numeric(lm(ret_excess_6 ~ mkt_excess)$coefficients[1]),
+    alpha_12 = as.numeric(lm(ret_excess_12 ~ mkt_excess)$coefficients[1])
+  ) %>%
+  knitr::kable(booktabs = T, digits = 4, col.names = c("Portfolio number", "CAPM alpha", "Market beta", "Average value-weighted excess return"), caption = "CAPM alpha, beta and excess return for the value-weighted momentum-sorted portfolios") %>%
+  kable_paper("hover", full_width = T)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# # Finding the CAPM alpha by regressing the data onto the market excess return
+# mom_portfolios_k_ahead %>%
+#   group_by(portfolio) %>%
+#   summarise(
+#     alpha = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
+#     beta = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[2]),
+#     ret_excess = mean(ret_excess)
+#   ) %>%
+#   knitr::kable(booktabs = T, digits = 4, col.names = c("Portfolio number", "CAPM alpha", "Market beta", "Average value-weighted excess return"), caption = "CAPM alpha, beta and excess return for the value-weighted momentum-sorted portfolios") %>%
+#   kable_paper("hover", full_width = T)
+# 
+
+# # Plot for CAPM alpha
+# while (!is.null(dev.list()))  dev.off() # Resets device settings (just in case, as it may cause problems)
+# mom_portfolios_summary %>%
+#   ggplot(aes(x = as.factor(portfolio), y = alpha, fill = as.factor(portfolio))) +
+#   geom_bar(stat = "identity") +
+#   labs(
+#     title = "CAPM alphas of the momentum-sorted portfolios",
+#     x = "Momentum-sorted portfolios",
+#     y = "CAPM alpha",
+#     fill = "Portfolio"
+#   ) +
+#   scale_y_continuous(labels = percent) +
+#   theme(legend.position = "None") + 
+#   theme_bw()
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 
+# 
+# # Using a for-loop to create data for each of the k-month-ahead scenarios
+# for(k in c(1,3,6,12)){
+#   crsp_monthly_new_k <- crsp_monthly_new %>% group_by(permno) %>% 
+#     mutate(mktcap_lag_long = lag(mktcap,12+k), 
+#            mktcap_lag_short = lag(mktcap,1+k),
+#            mom = 100*(mktcap_lag_short - mktcap_lag_long)/mktcap_lag_long) %>% 
+#     filter(!is.na(mktcap_lag_long)) %>% 
+#     filter(!is.na(ret_excess)) %>% 
+#     filter(!is.na(mom)) %>%
+#     arrange(desc(mom))
+#   
+#   mom_portfolios <- crsp_monthly_new_k %>%
+#     group_by(month) %>%
+#     mutate(
+#       breakpoint_10 = quantile(mom, probs = .1),
+#       breakpoint_20 = quantile(mom, probs = .2),
+#       breakpoint_30 = quantile(mom, probs = .3),
+#       breakpoint_40 = quantile(mom, probs = .4),
+#       breakpoint_50 = quantile(mom, probs = .5),
+#       breakpoint_60 = quantile(mom, probs = .6),
+#       breakpoint_70 = quantile(mom, probs = .7),
+#       breakpoint_80 = quantile(mom, probs = .8),
+#       breakpoint_90 = quantile(mom, probs = .9),
+#       portfolio = case_when(
+#         mom <= breakpoint_10 ~ 10,
+#         mom > breakpoint_10 & mom <= breakpoint_20 ~ 20,
+#         mom > breakpoint_20 & mom <= breakpoint_30 ~ 30,
+#         mom > breakpoint_30 & mom <= breakpoint_40 ~ 40,
+#         mom > breakpoint_40 & mom <= breakpoint_50 ~ 50,
+#         mom > breakpoint_50 & mom <= breakpoint_60 ~ 60,
+#         mom > breakpoint_60 & mom <= breakpoint_70 ~ 70,
+#         mom > breakpoint_70 & mom <= breakpoint_80 ~ 80,
+#         mom > breakpoint_80 & mom <= breakpoint_90 ~ 90,
+#         mom > breakpoint_90 ~ 100
+#       )
+#     ) %>%
+#     group_by(month, portfolio) %>%
+#     summarize(ret_excess = weighted.mean(ret_excess, mktcap_lag_short), .groups = "drop")
+#   
+#   
+#   mom_portfolios <- mom_portfolios %>%
+#     left_join(ff_monthly, by = "month")
+#   
+#   
+#   # Finding CAPM alpha
+#   mom_portfolios_summary <- mom_portfolios %>%
+#     group_by(portfolio) %>%
+#     summarise(
+#       alpha = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
+#       beta = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[2]),
+#       ret_excess = mean(ret_excess)
+#     )
+#   
+#   # Plot for CAPM alpha 
+#   tmp <- mom_portfolios_summary %>%
+#     ggplot(aes(x = portfolio, y = alpha, fill = as.factor(portfolio))) +
+#     geom_bar(stat = "identity") +
+#     labs(
+#       title = paste0("Alphas of momentum-sorted portfolios (k=",k,")"),
+#       x = "Momentum decile portfolios",
+#       y = "CAPM alpha",
+#       fill = "Portfolio"
+#     ) +
+#     scale_y_continuous(labels = percent) +
+#     theme(legend.position = "None")
+#   
+#   #Saving the plots to be printed out after the for-loop
+#   if(k==1){
+#     plot1 <- tmp
+#   } else if(k==3){
+#     plot3 <- tmp
+#   } else if(k==6){
+#     plot6 <- tmp
+#   } else{
+#     plot12 <- tmp
+#   }
+# }
+# 
+# plot1
+# plot3
+# plot6
+# plot12
 
 ```
 
